// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mistakes render correctly Renders count equals one 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
</div>
`;

exports[`Mistakes render correctly Renders count equals zero 1`] = `
<div
  className="game__mistakes"
/>
`;
